// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render Header component correctly 1`] = `
<DocumentFragment>
  <header>
    <a>
      <abbr
        title="Blog Home"
      >
        <span
          data-testid="title_header"
        >
          Blog
        </span>
      </abbr>
    </a>
    <nav>
      <ul
        class="nav__links"
      >
        <li>
          <abbr
            title="Login"
          >
            <a>
              Login
            </a>
          </abbr>
        </li>
        <li>
          <abbr
            title="Create An Acount"
          >
            <a>
              Sign In
            </a>
          </abbr>
        </li>
      </ul>
    </nav>
  </header>
</DocumentFragment>
`;

exports[`Should render Header component with props correctly 1`] = `
<DocumentFragment>
  <header>
    <a>
      <abbr
        title="Blog Home"
      >
        <span
          data-testid="title_header"
        >
          Blog
        </span>
      </abbr>
    </a>
    <nav>
      <ul
        class="nav__links"
      >
        <li>
          <abbr
            title="Create New Blog"
          >
            <a>
              New Blog
            </a>
          </abbr>
        </li>
        <li>
          <abbr
            title="Your Profile"
          >
            <a>
              <img
                class="nav__links_icon"
                src="64572.png"
              />
              User
            </a>
          </abbr>
        </li>
        <li>
          <abbr
            title="Logout"
          >
            <button
              class="nav__link_b"
            >
              Logout
            </button>
          </abbr>
        </li>
      </ul>
    </nav>
  </header>
</DocumentFragment>
`;
